--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,7 @@
             android:hint="@string/textPasswordHint"
             android:paddingStart="10dp"
             android:paddingEnd="10dp"
+            android:password="true"
             android:textColor="@color/black"
             android:textColorHint="@color/light_gray" />
 
@@ -74,7 +75,9 @@
             android:fontFamily="sans-serif-condensed"
             android:text="@string/textLoginText"
             android:textColor="@color/white"
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            android:onClick="onRegistroClick"
+            />
     </LinearLayout>
 
 </RelativeLayout>
