--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,8 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-
     <color name="light_gray">#616161</color>
+    <color name="shadow">#4D808080</color>
     <color name="dark_gray">#333333</color>
     <color name="blue_button">#32599A</color>
 </resources>
