Landscape layouts added.

--- a/app/src/main/res/layout-land/win_parking_lot_view.xml
+++ b/app/src/main/res/layout-land/win_parking_lot_view.xml
@@ -64,20 +64,85 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginBottom="30dp">
 
-            <ImageView
-                android:id="@+id/parkingView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="60dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                android:adjustViewBounds="true"
-                android:scaleType="centerInside"
-                android:src="@drawable/parkinglot_pic" />
+            <LinearLayout
+                android:id="@+id/slotTable"
+                android:layout_width="400dp"
+                android:layout_height="500dp"
+                android:layout_marginLeft="40dp"
+                android:background="@drawable/parkinglot_pic"
+                android:orientation="vertical">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="7dp"
+                    android:gravity="center_horizontal">
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/Slot1"
+                        android:layout_width="80dp"
+                        android:layout_height="35dp"
+                        android:background="@drawable/round_back_transparent_100"
+                        android:text="Slot 1" />
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/Slot2"
+                        android:layout_width="80dp"
+                        android:layout_height="35dp"
+                        android:layout_toRightOf="@+id/Slot1"
+                        android:background="@drawable/round_back_transparent_100"
+                        android:text="Slot 2" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:gravity="center_horizontal">
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/Slot3"
+                        android:layout_width="150dp"
+                        android:layout_height="45dp"
+                        android:background="@drawable/round_back_transparent_100"
+                        android:text="Slot 3" />
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/Slot4"
+                        android:layout_width="150dp"
+                        android:layout_height="45dp"
+                        android:layout_toRightOf="@+id/Slot3"
+                        android:background="@drawable/round_back_transparent_100"
+                        android:text="Slot 4" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="0dp">
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/Slot5"
+                        android:layout_width="200dp"
+                        android:layout_height="100dp"
+                        android:background="@drawable/round_back_transparent_100"
+                        android:text="Slot 5" />
+
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/Slot6"
+                        android:layout_width="200dp"
+                        android:layout_height="100dp"
+                        android:layout_toRightOf="@+id/Slot5"
+                        android:background="@drawable/round_back_transparent_100"
+                        android:text="Slot 6" />
+                </RelativeLayout>
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -85,7 +150,7 @@
                 android:layout_marginTop="40dp"
                 android:layout_marginBottom="40dp"
                 android:layout_marginLeft="60dp"
-                android:layout_toRightOf="@id/parkingView"
+                android:layout_toRightOf="@id/slotTable"
                 android:orientation="vertical"
                 android:gravity="center_horizontal">
 
