--- a/app/src/main/res/layout-land/win_parking_lot_view.xml
+++ b/app/src/main/res/layout-land/win_parking_lot_view.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
@@ -59,120 +59,83 @@
                 android:textColor="@color/black"
                 android:textSize="20sp" />
 
-
         </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="30dp">
+        <LinearLayout
+            android:id="@+id/slotTable"
+            android:layout_width="400dp"
+            android:layout_height="250dp"
+            android:layout_marginBottom="40dp"
+            android:background="@drawable/parkinglot_pic"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/slotTable"
-                android:layout_width="400dp"
-                android:layout_height="500dp"
-                android:layout_marginLeft="40dp"
-                android:background="@drawable/parkinglot_pic"
-                android:orientation="vertical">
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="7dp"
-                    android:gravity="center_horizontal">
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/Slot1"
-                        android:layout_width="80dp"
-                        android:layout_height="35dp"
-                        android:background="@drawable/round_back_transparent_100"
-                        android:text="Slot 1" />
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/Slot2"
-                        android:layout_width="80dp"
-                        android:layout_height="35dp"
-                        android:layout_toRightOf="@+id/Slot1"
-                        android:background="@drawable/round_back_transparent_100"
-                        android:text="Slot 2" />
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="0dp"
-                    android:gravity="center_horizontal">
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/Slot3"
-                        android:layout_width="150dp"
-                        android:layout_height="45dp"
-                        android:background="@drawable/round_back_transparent_100"
-                        android:text="Slot 3" />
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/Slot4"
-                        android:layout_width="150dp"
-                        android:layout_height="45dp"
-                        android:layout_toRightOf="@+id/Slot3"
-                        android:background="@drawable/round_back_transparent_100"
-                        android:text="Slot 4" />
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="0dp">
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/Slot5"
-                        android:layout_width="200dp"
-                        android:layout_height="100dp"
-                        android:background="@drawable/round_back_transparent_100"
-                        android:text="Slot 5" />
-
-                    <androidx.appcompat.widget.AppCompatButton
-                        android:id="@+id/Slot6"
-                        android:layout_width="200dp"
-                        android:layout_height="100dp"
-                        android:layout_toRightOf="@+id/Slot5"
-                        android:background="@drawable/round_back_transparent_100"
-                        android:text="Slot 6" />
-                </RelativeLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:layout_marginBottom="40dp"
-                android:layout_marginLeft="60dp"
-                android:layout_toRightOf="@id/slotTable"
-                android:orientation="vertical"
+                android:layout_marginTop="7dp"
                 android:gravity="center_horizontal">
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/buttonSelect"
-                    android:layout_width="150dp"
-                    android:layout_height="50dp"
-                    android:background="@drawable/round_back_outline_100"
-                    android:text="@string/textSelectButton" />
+                    android:id="@+id/Slot1"
+                    android:layout_width="80dp"
+                    android:layout_height="35dp"
+                    android:background="@drawable/round_back_transparent_100"
+                    android:text="Slot 1" />
 
                 <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/buttonRelease"
+                    android:id="@+id/Slot2"
+                    android:layout_width="80dp"
+                    android:layout_height="35dp"
+                    android:layout_toRightOf="@+id/Slot1"
+                    android:background="@drawable/round_back_transparent_100"
+                    android:text="Slot 2" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
+                android:gravity="center_horizontal">
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/Slot3"
                     android:layout_width="150dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="20dp"
-                    android:background="@drawable/round_back_outline_100"
-                    android:text="@string/textReleaseButton" />
+                    android:layout_height="45dp"
+                    android:background="@drawable/round_back_transparent_100"
+                    android:text="Slot 3" />
 
-            </LinearLayout>
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/Slot4"
+                    android:layout_width="150dp"
+                    android:layout_height="45dp"
+                    android:layout_toRightOf="@+id/Slot3"
+                    android:background="@drawable/round_back_transparent_100"
+                    android:text="Slot 4" />
+            </RelativeLayout>
 
-        </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="0dp">
 
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/Slot5"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:background="@drawable/round_back_transparent_100"
+                    android:text="Slot 5" />
+
+                <androidx.appcompat.widget.AppCompatButton
+                    android:id="@+id/Slot6"
+                    android:layout_width="200dp"
+                    android:layout_height="100dp"
+                    android:layout_toRightOf="@+id/Slot5"
+                    android:background="@drawable/round_back_transparent_100"
+                    android:text="Slot 6" />
+            </RelativeLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
